# LocalVQE

./: README.md  flake.nix
ggml/: CMakeLists.txt  bench.cpp  localvqe_api.h  localvqe_graph.cpp  model_hash.cpp
ggml/tests/fixtures/: localvqe-v1.3-4.8M-f32.out.f32
obs-plugin/: CMakeLists.txt
obs-plugin/data/locale/: en-US.ini
obs-plugin/src/: localvqe-filter.c  plugin-main.c
pytorch/: README.md
